gcc/testsuite/rust/rustc/ui/parser/issues/issue-87812-path.rs
macro_rules! foo {
    ( $f:path ) => {{
        let _: usize = $f; // { dg-error ".E0308." "" { target *-*-* } }
    }};
}

struct Baz;

fn main() {
    foo!(Baz);
}

